--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
+    "browser-sync": "^2.26.14",
     "gatsby": "^3.4.1",
     "gatsby-image": "^3.6.0",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
