--- a/package.json
+++ b/package.json
@@ -1,42 +1,38 @@
 {
-  "name": "gatorade-app",
+  "name": "gatsby-starter-default",
   "private": true,
-  "description": "Implement drupal With gatorade app",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Web & Digital Ark SAS",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "aos": "^2.3.4",
-    "bootstrap": "^4.6.0",
-    "browser-sync": "^2.26.14",
-    "gatsby": "^3.4.1",
-    "gatsby-image": "^3.6.0",
-    "gatsby-plugin-gatsby-cloud": "^2.4.1",
-    "gatsby-plugin-image": "^1.4.0",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
+    "bootstrap": "^5.0.1",
+    "gatsby": "^3.6.2",
+    "gatsby-image": "^3.7.1",
+    "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-offline": "^4.6.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sass": "^4.7.1",
-    "gatsby-plugin-sharp": "^3.4.1",
-    "gatsby-plugin-styled-components": "^4.6.0",
-    "gatsby-plugin-theme-ui": "^0.9.1",
-    "gatsby-source-drupal": "^4.6.0",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-sharp": "^3.4.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.6.0",
+    "jquery": "^3.6.0",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.6.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "react-slick": "^0.28.1",
     "sass": "^1.34.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.0",
-    "theme-ui": "^0.9.1"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0",
     "prettier": "2.2.1"
   },
   "keywords": [
