--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sass": "^4.7.1",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-source-drupal": "^4.7.1",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "jquery": "^3.6.0",
