--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-qr-scanner": "^1.0.0-alpha.7",
+    "react-qr-reader": "^2.2.1",
     "react-slick": "^0.28.1",
     "sass": "^1.34.1",
     "slick-carousel": "^1.8.1",
